--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1",
     "wouter": "^3.3.5"
   },
   "devDependencies": {
