--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
   "name": "backend",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "createdb": "bun run scripts/dbinitializer.ts"
   },
   "dependencies": {
     "hono": "^4.6.10"
@@ -10,3 +11,5 @@
     "@types/bun": "latest"
   }
 }
+
+
