created script asyncrunner to run functions that require top level await and isolated output

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "name": "backend",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "dbinit": "bun run scripts/dbinitializer.ts"
+    "dbinit": "bun run scripts/dbinitializer.ts",
+    "asrun": "bun run scripts/asyncrunner.ts"
   },
   "dependencies": {
     "hono": "^4.6.10"
